refactor: 변수명 변경, 줄바꿈 등 리팩토링